--- a/site.yml
+++ b/site.yml
@@ -2,6 +2,11 @@
 - hosts: all
   become: true
   tasks:
+    - name: ensure rsyslog is installed on all machines
+      dnf:
+        name: rsyslog
+        state: present
+
     - name: Add mappings to /etc/hosts
       blockinfile:
         path: /etc/hosts
@@ -133,7 +138,25 @@
         state: started
         enabled: yes
 
+    - name: create logging directory for haproxy
+      file:
+        path: /var/lib/haproxy/dev
+        state: directory
+        mode: '0755'
+      notify: restart haproxy
+     
+    - name:  create rsyslog for haproxy logs
+      template:
+        src: templates/haproxyrsyslog.j2
+        dest: /etc/rsyslog.d/99-haproxy.conf
+      notify: restart rsyslog
+
   handlers:
+    - name: restart rsyslog
+      systemd:
+        name: rsyslog
+        state: restarted
+
     - name: restart haproxy
       systemd:
         name: haproxy
